--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.chen.hbase</groupId>
-  <artifactId>hbase-client-sdk</artifactId>
-  <version>1.0.0</version>
+  <groupId>org.chen.janusgraph</groupId>
+  <artifactId>janusgraph-client</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>hbase-client-sdk</name>
+  <name>janusgraph-client-sdk</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -89,6 +89,16 @@
       <artifactId>powermock-core</artifactId>
       <version>1.7.4</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.janusgraph</groupId>
+      <artifactId>janusgraph-core</artifactId>
+      <version>0.6.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.janusgraph</groupId>
+      <artifactId>janusgraph-hbase-core</artifactId>
+      <version>0.6.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
